test/parsing/BlockMissingClosingBrace.good
BlockMissingClosingBrace.chpl:3: error: syntax error
